--- a/Ultraviolet-Static/public/index.css
+++ b/Ultraviolet-Static/public/index.css
@@ -1,217 +1,47 @@
-@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap');
-@keyframes loadInAnimation {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 100;
-  }
+:root {
+  --background-image: url('https://raw.githubusercontent.com/ijnfem/seraph/main/images/backgrounds/seraph/homebg.png');
+  --font-family: 'Ubuntu', sans-serif;
+  --text-color: #fff;
+  --background-color: black;
+  --border-color1: #000000;
+  --border-color2: #ffffff;
+  --hover-color: #1a1818;
+  --text-glow: #000000
 }
 
-* {
-  transition-duration: 0.5s;
-  outline: none;
-  border: none;
-  box-sizing: border-box;
-  align-content: center;
-  text-align: center;
-  font-family: 'Prompt', sans-serif;
-  color: var(--textcolor);
+html {
+  height: 100%;
 }
 body {
   margin: 0;
   padding: 0;
-  background: var(--bg);
-  color: var(--textcolor);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-
-  overflow: hidden;
-}
-header,
-footer {
-  background-color: var(--uibg);
+  font-family: var(--font-family);
   display: flex;
-  padding: 0.7rem;
-  width: 100%;
-  z-index: 1;
-  justify-content: center;
+  background-color: var(--background-color); 
+  animation: mainHeaderAnimation 2s forwards;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  height: 100%;
 }
-header {
-  top: 0;
-  border-radius: 0 0 20px 20px;
-  position: fixed;
-  box-shadow: 0 5px 10px var(--uibg);
+
+body::-webkit-scrollbar {
+  width: 0;
 }
-footer.noscroll {
-  position: fixed;
-  overflow: hidden;
-}
-footer {
-  bottom: 0;
-  border-radius: 20px 20px 0 0;
-  box-shadow: 0 -5px 10px var(--uibg);
-}
-footer a,
-footer a:visited,
-header a,
-header a:visited {
+
+#uv-form {
+  color: var(--text-color);
+  padding: 2px;
+  font-family: var(--font-family);
+  border-radius: 16px;
   text-align: center;
-  font-weight: 700;
-  text-decoration: none;
-  margin-right: 2rem;
-  margin-left: 1rem;
-}
-
-footer a:hover,
-header a:hover {
-  text-shadow: 2px 2px 6px var(--textcolor);
-}
-main {
-  animation: 1.25s ease-in-out 0s 1 loadInAnimation;
-  align-items: center;
-  flex-direction: column;
-  display: flex;
-  min-height: calc(100vh - (2 * 0.7rem));
-  gap: 0;
-  flex-wrap: wrap;
-  margin: auto;
-  margin-top: 4rem;
-  width: 90%;
-  overflow: hidden;
-}
-main#main.noscroll {
-  justify-content: center;
-}
-h1,
-h2,
-h3,
-p,
-a,
-label {
-  margin: 0;
-  padding: 0;
-  text-shadow: var(--shadow);
-}
-.samerow {
-  display: flex;
-  justify-content: center;
-  gap: 0;
-  flex-wrap: wrap;
-}
-h1 {
-  font-size: 60px;
-}
-
-h2 {
-  font-size: 40px;
-}
-h3 {
-  font-size: 20px;
-}
-p, a {
-  font-size: 20px;
-}
-
-button, input#websubmit.submit, input[type=submit]#panic {
-  cursor: pointer;
-  background-color: var(--inputbg);
-  border-color: var(--inputborder);
-  border-width: 3px;
-  border-radius: 10px;
-  border-style: solid;
-  padding: 7px;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin: 10px;
-}
-
-button:hover, input#websubmit.submit:hover, input[type=submit]#panic:hover {
-  filter: brightness(80%);
-  transform: scale(1.07);
-}
-
-img {
-  width: 100%;
-  aspect-ratio: auto;
-  user-select: none;
-  filter: drop-shadow(var(--shadow))
-}
-
-.img-container a {
-  width: 100%;
-}
-
-.img-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  gap: 0;
-  flex-wrap: wrap;
-  width: 6%;
-  aspect-ratio: 1 / 1;
-  margin: 2%;
-}
-
-.game, .suggest {
-  width: 15%;
-  border-radius: 20px;
-  display: inline-block;
-  background-color: var(--uibg);
-  margin: 15px;
-  cursor: pointer;
-  box-shadow: 0px 0px 5px 5px var(--uibg);
-}
-
-.game:hover, .suggest:hover {
-  transform: scale(1.1);
-  filter: brightness(85%);
-  box-shadow: 0px 0px 5px 5px var(--uibg);
-}
-
-.game h1, .suggest h1 {
-  font-size: 12px;
-  float: right;
-  margin-right: 10px;
-  margin-top: 3px;
-  margin-bottom: 3px;
-}
-
-.game img, .suggest img {
-  width: 100%;
-  border-radius: 20px;
-  aspect-ratio: 1 / 1;
-}
-
-img.star {
-  float: left;
-  width: 10%;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  margin-left: 10px;
-}
-
-#noscroll {
-  overflow-y: hidden;
-  justify-content: center;
-}
-
-#games,
-#pinned {
-  width: 100%;
-  justify-content: center;
-}
-
-a {
-  font-size: 16px;
+  font-size: 32px;
+  width: 30%;
 }
 
 input[type="text"] {
-  width: 50%;
-  background-color: var(--inputbg);
+  width: 100%;
+  background-color: var(--background-color);
+  color: var(--text-color);
   box-sizing: border-box;
   font-size: 20px;
   padding: 0.8% 0.8%;
@@ -219,146 +49,173 @@ input[type="text"] {
   border-radius: 5px;
   outline: none;
   margin: 10px;
-  border: 2px solid var(--inputborder);
-  border-radius: 5px;
+  border: 2px solid var(--border-color2);
+  font-family: var(--font-family);
+  border-radius: 32px;
+  padding-top: 7px;
+  padding-bottom: 7px;
   transition: opacity 0.25s ease-in-out;
   opacity: 100%;
 }
 input[type=text]:hover {
   opacity: 80%;
+  color: var(--text-color);
 }
 
-.bookmarkletdiv {
-  width: 30%;
-  background-color: var(--uibg);
-  box-shadow: 0px 0px 5px 5px var(--uibg);
-  padding: 5px;
-  margin: 15px;
-  border-radius: 10px;
-  display: inline-block;
-}
-
-.bookmarkletdiv a {
-  font-size: 30px;
-}
-
-form {
-  width: 100%;
-}
-.samerow.themebtns {
-  width: 70%;
-}
-
-select {
-  border-radius: 5px;
-  background-color: var(--inputbg);
-  border-color: var(--inputborder);
-  border-width: 5px;
-  border-radius: 10px;
-  border-style: solid;
-  padding: 0.5% 0.5%;
-  margin: 0.25%;
-}
-
-gameframe {
-  width: 100vw;
-  height: 90vh;
-}
-gameframe iframe {
+.content-side {
   width: 100%;
   height: 100%;
-}
-
-gameframe.header {
+  background-color: var(--background-color);
+  color: var(--text-color);
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  animation: mainHeaderAnimation 1s ease-in-out forwards;
+  background-image: var(--background-image);
+  background-size: cover;
 }
 
-sl-icon-button {
-  font-size: 2rem;
-  padding-right: 5px;
+h1 {
+  font-size: 96px;
+  font-family: var(--font-family);
+  text-shadow: 0 0 10px var(--text-color),
+               0 0 10px var(--text-glow),
+               0 0 30px var(--text-glow),
+               0 0 40px var(--text-color),
+               0 0 50px var(--text-glow),
+               0 0 60px var(--text-color),
+               0 0 70px var(--text-glow),
+               0 0 80px #000000;
+  margin-bottom: 0px;
 }
 
-h3#gametitle {
-  font-size: 2rem;
-}
-
-.img-credits {
-  height: 40vh;
-  width: auto;
-  box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.555)
-}
-
-label {
+h2 {
   font-size: 20px;
-  padding-left: 5px;
 }
-body {
-  --inputbg: #000000;
-  --inputborder: #000000;
-  --uibg: #000000;
-  --textcolor: #000;
-  --bg: #000000;
+
+p {
+  font-size: 18px;
+  margin-bottom: 2px;
+  padding-left: 10%;
+  padding-right: 10%;
+  text-align: center;
+  text-shadow: 5px 5px 5px var(--text-glow);
+  animation: paragraphTween 1.2s ease-in-out forwards;
 }
-body[theme=main] {
-  --inputbg: #3c096c;
-  --inputborder: #5a189a;
-  --uibg: #240046;
-  --textcolor: #fff;
-  --bg: #10002b;
+
+.linkp a {
+  font-size: 20px;
+  text-align: center;
+  border: 3px solid transparent;
+  transition: 0.15s ease-in-out;
+  text-shadow: 5px 5px 5px var(--text-glow);
 }
-body[theme=light] {
-  --inputbg: #bbbbbb;
-  --inputborder: #e6e6e6;
-  --uibg: #b3b3b3;
-  --textcolor: #1a1a1a;
-  --bg: #c5c5c5;
+
+.linkp a:hover {
+  color: rgb(199, 192, 192);
 }
-body[theme=dark] {
-  --inputbg: #333333;
-  --inputborder: #444444;
-  --uibg: #242424;
-  --textcolor: #fff;
-  --bg: #0c0c0c;
+
+a {
+  font-size: 18px;
+  text-decoration: underline;
+  color: var(--text-color);
+  text-shadow: 5px 5px 5px var(--text-glow);
 }
-body[theme=egamepass] {
-  --inputbg: #4f6ed1;
-  --inputborder: #5586e0;
-  --uibg: #185494;
-  --textcolor: #a7d3ff;
-  --bg: #16416f;
+
+.gamesbutton {
+  background-color: var(--background-color);
+  color: var(--text-color);
+  width: 50%;
+  max-width: 100px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  height: 90px;
+  margin: 0 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  transition: background-color 0.15s ease-in-out;
+  border: 3px solid transparent;
+  border-image: linear-gradient(45deg, rgb(0, 0, 0), rgb(255, 255, 255));
+  border-image-slice: 1;
+  border-radius: 4px;
+  animation: borderAnimation 1s infinite alternate;
+  animation-delay: calc(var(--delay) * 1ms);
+  position: relative;
 }
-body[theme=cools1te] {
-  --inputbg: #a134dc;
-  --inputborder: #b153e3;
-  --uibg: #ab28cf;
-  --textcolor: #d3a4fa;
-  --bg: #8e14af;
+
+.gamesbutton img {
+  width: calc(100% - 24px);
+  height: auto;
+  display: block;
+  margin: 0 auto;
 }
-body[theme=sunset] {
-  --inputbg: #537294;
-  --inputborder: #30719c;
-  --uibg: #2a7491;
-  --textcolor: #fff;
-  --bg: url("themebgs/sunset_theme.jpg"), rgb(59, 67, 78);
-  /* https://wallhaven.cc/w/jxl3qp */
-  --shadow: 0px 0px 2px #a5dcf5;
+
+.gamesbutton-link {
+  text-decoration: none;
+  color: var(--text-color);
 }
-body[theme=mountains] {
-  --inputbg: #d37f7f;
-  --inputborder: #e28a8a;
-  --uibg: #d38493;
-  --textcolor: #fff;
-  --bg: url("themebgs/mountains_theme.jpg"), #bf7483;
-  /* https://wallhaven.cc/w/l82kpr */
-  --shadow: 0px 0px 4px #bba29b;
+
+.gamesbutton:hover {
+  background-color: var(--hover-color); 
+  transition: background-color 0.3s ease-in-out; 
 }
-body[theme=vaporwave] {
-  --inputbg: #4b2d64;
-  --inputborder: #74568d;
-  --uibg: #51166d;
-  --textcolor: #fff;
-  --bg: url("themebgs/vaporwave_theme.jpg"), #61437a;
-  /* https://wallhaven.cc/w/l82kpr */
-  --shadow: 0px 0px 4px #000000;
+
+.button-text {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  right: 0;
+  text-align: center; 
+}
+
+.button-container {
+  display: flex;
+  text-align: center; 
+}
+
+
+.cursor {
+  width: 7px;
+  height: 7px;
+  background-color: var(--text-color);
+  border-radius: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  opacity: 0.8;
+  z-index: 10000;
+}
+
+@keyframes mainHeaderAnimation {
+  0% {
+      opacity: 0;
+      transform: translateY(-25%);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0%);
+  }
+}
+
+@keyframes paragraphTween {
+  0% {
+      transform: translateX(-4%);
+  }
+  100% {
+      transform: translateX(0%);
+  }
+}
+
+@keyframes borderAnimation {
+  0% {
+      border-image-source: linear-gradient(45deg, var(--border-color1), var(--border-color2));
+  }
+  100% {
+      border-image-source: linear-gradient(45deg, var(--border-color2), var(--border-color1));
+  }
 }
